[workspace]
members = ["compose_spec_macros"]
resolver = "2"

[workspace.package]
authors = ["Paul Nettleton <k9@k9withabone.dev>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/k9withabone/compose_spec_rs"
rust-version = "1.70"

[workspace.lints.clippy]
pedantic = "warn"

[workspace.dependencies]
compose_spec_macros = { version = "=0.1.0", path = "compose_spec_macros" }
serde = "1"
serde_yaml = "0.9"

[package]
name = "compose_spec"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Types for (de)serializing from/to the compose-spec"
keywords = ["compose", "containers", "docker", "podman"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
compose_spec_macros.workspace = true
indexmap = { version = "2", features = ["serde"] }
itoa = "1"
serde = { workspace = true, features = ["derive"] }
serde-untagged = "0.1"
serde_yaml.workspace = true
thiserror = "1.0.28"
url = { version = "2.3", features = ["serde"] }

[dev-dependencies]
pomsky-macro = "0.11"
proptest = "1.3.1"
