[package]
name = "compose_spec_macros"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for use in the compose_spec crate"
keywords = ["compose", "containers", "proc_macro"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
serde.workspace = true
serde_yaml.workspace = true
