[package]
name = "compose_spec_macros"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Procedural macros for use in the compose_spec crate"
keywords = ["compose", "containers", "proc_macro"]
categories = ["development-tools", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = "2.0.1"

[dev-dependencies]
serde.workspace = true
serde_yaml.workspace = true
